--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -47,6 +47,7 @@ LISTS
   font-weight: 500;
   width: 100%;
   text-align: center;
+  border-radius: 6px 6px 0px 0px;  
   margin: 0;
 }
 
@@ -87,6 +88,7 @@ body a:hover {
 
 .main ul {
   background-color: #EFF1F5;
+  border-radius: 0px 0px 6px 6px;
 }
 
 .teilnoten h3 {
