--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -51,6 +51,15 @@ LISTS
   margin: 0;
 }
 
+.main h4 {
+  font-family: 'Roboto Mono', monospace;
+  font-weight: 500;
+  width: 100%;
+  text-align: center;
+  border-radius: 0px 0px 6px 6px;  
+  margin: 0;
+}
+
 .main a {
   font-family: 'Roboto Mono', monospace;
   font-weight: 400;
@@ -85,10 +94,12 @@ body a:hover {
   color: #96B5B4;
 }
 
-
 .main ul {
   background-color: #EFF1F5;
-  border-radius: 0px 0px 6px 6px;
+}
+
+.main h4 {
+  background-color: #BC5252;
 }
 
 .teilnoten h3 {
