--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,23 +1,18 @@
 /* small window */
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 240px) {
   .main section {
-    margin: 20px 5%;
-    width: 28.3333%;
+    margin: 20px 15%;
+    width: 70%;
+    float: center;
   }
-
 }
 
 /* desktop */
-@media screen and (min-width: 660px) {
+@media screen and (min-width: 720px) {
   .main section {
     margin: 20px 5%;
     width: 20%;
   }
-   
-   .info section {
-      width: 50%;
-      margin: 20px 10%;
-   }
 
   .main {
     margin: inherit 10%;
